--- a/V2/style.css
+++ b/V2/style.css
@@ -1,3 +1,12 @@
+/* ============================================================
+   Project: Glass Calculator (v2.0)
+   Author: Mohammadreza Shahbazi (M.SH)
+   GitHub: https://github.com/Mohammadreza-Shahbazi-313
+   LinkedIn: https://www.linkedin.com/in/mohammadreza-shahbazi-313sh/
+   Telegram: https://t.me/STANsoSAD
+   Email: eminemengland2000@gmail.com
+   Year: 2025
+   ============================================================ */
 
 :root {
   --bg-gradient: linear-gradient(135deg, #7f5a83, #0d324d);
